Fixed HQ package deployment. The sigar binaries were not being found so we're loading them explicitly before deploying the hq.ear. Also made the class thread safe to support different threads starting/stopping the server.